--- a/src/style.css
+++ b/src/style.css
@@ -7,19 +7,44 @@ body{
     background-color: black;
 }
 
+.cabecalho {
+    display: flex;
+    justify-content: space-between reverse;
+    padding: 1.5% 5%;
+	gap: 10px;
+}
+
+.img__cabecalho{
+	width: 76px;
+}
+
+.cabecalho__nav {
+	display: inline;
+	margin: 0 0 0 15px;
+}
+
+
+.cabecalho__nav__link {
+    padding: 5px;
+	color: #fff;
+	font-size: 16px;
+	text-decoration: none;
+}
+
 .bg__img{
     width: 100vw;
+    top: 0;
+    left: 0;
     position: absolute;
-    background-size: cover;
-    box-shadow: inset 0 0 100px rgba(236, 2, 2, 0.8);
-
+    object-fit: cover;
+    z-index: -1;
   }
 
 .bg__conteudo{
     position: absolute;
     display: flex;
     flex-direction: column;
-    padding: 12% 5%;
+    padding: 9% 5%;
     width: 40%;
     gap: 3px;
 }
@@ -31,8 +56,9 @@ body{
 .bg__text{
     font-family: 'Inter', sans-serif;
     color: aliceblue;
-    font-size: 1.38rem;
+    font-size: 18px;
     height: 600;
+    width: 83%;
 }
 
 .bg__button{
@@ -45,7 +71,7 @@ body{
     align-items: center;
     justify-content: center;
     border-radius: 5%;
-    padding: 10px 33px;
+    padding: 6px 25px;
     margin-right: 5%;  
     cursor: pointer; 
     border-radius: 2%;
@@ -54,7 +80,7 @@ body{
 }
 
 .bg__button__play span{
-    font-size: 20px;
+    font-size: 18px;
     font-family: 'Inter', sans-serif;
     height: 400;
     
@@ -65,15 +91,15 @@ body{
     align-items: center;
     justify-content: center;
     border-radius: 3%;
-    padding: 10px 33px;
-    background-color: rgba(87, 87, 87, 0.6);
+    padding: 6px 25px;
+    background-color: rgba(87, 87, 87, 0.7);
     border: none;
     cursor: pointer;  
     gap: 8px; 
 }
 
 .bg__button__info span{
-    font-size: 20px;
+    font-size: 18px;
     font-family: 'Inter', sans-serif;
     color: #fff;
 }
