--- a/src/style.css
+++ b/src/style.css
@@ -1,21 +1,26 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;600&display=swap');
 
+* {
+    box-sizing: border-box;
+  }
+
 body{
-    margin: 0;
-    border: 0;
+    margin: 0 auto;
     padding: 0;
+    font-family: Arial, Helvetica, sans-serif;
     background-color: black;
 }
 
 .cabecalho {
     display: flex;
     justify-content: space-between reverse;
-    padding: 1.5% 5%;
+    padding: 1.5% 1%;
 	gap: 10px;
 }
 
 .img__cabecalho{
 	width: 76px;
+   
 }
 
 .cabecalho__nav {
@@ -31,78 +36,109 @@ body{
 	text-decoration: none;
 }
 
-.bg__img{
-    width: 100vw;
+
+.app__background {
+    height: 100vh;
+    background-image: linear-gradient(
+        to bottom,
+        rgba(0, 0, 0, 0.9) 5%,
+        rgba(0, 0, 0, 0.2) 20%,
+        rgba(0, 0, 0, 0.2) 80%,
+        rgba(0, 0, 0, 0.8) 100%
+      ),
+      url(./img/background.png);
+    background-size: cover;
+    padding: 0.26rem 0.75rem 0 0.75rem;
+  }
+  
+  .app__hero {
+    width: 100%;
+    margin: 0 auto;
+    height: 100%;
+    padding: 0 3rem;
+  }
+
+.banner {
+    height: 80vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 50%;
+  }
+
+  .banner__poster{
+    width: 450px;
+  }
+  
+.banner__poster__bg{
+   width: 100vw;
     top: 0;
     left: 0;
     position: absolute;
-    object-fit: cover;
     z-index: -1;
+}
+
+.banner__subtitle{
+    font-size: 1.2vw;
+    color: white;
+    line-height: 1.25;
+    padding: 1rem 13rem 0 0;
+}
+
+.banner__btn {
+    display: flex;
+    margin-top: 2rem;
+    border-radius: 5px;
+    gap: 20px
+    
+  }
+  
+  .banner__btn--play {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    padding: 0.6rem 2rem;
+    margin-right: 0.75rem;
+    font-weight: 600;
+    border-radius: 0.125rem;
+    font-family: inherit;
+    font-size: 100%;
+    border: solid transparent;
+    
+  }
+  
+  .banner__btn--play:hover {
+    background-color: rgba(255, 255, 255, 0.777);
   }
 
-.bg__conteudo{
-    position: absolute;
-    display: flex;
-    flex-direction: column;
-    padding: 9% 5%;
-    width: 40%;
-    gap: 3px;
-}
+.bg__button__play i {
+    margin-right: 0.5rem;
+  }
 
-.bg__poster{
-    width: 78%;
-}
-
-.bg__text{
-    font-family: 'Inter', sans-serif;
-    color: aliceblue;
-    font-size: 18px;
-    height: 600;
-    width: 83%;
-}
-
-.bg__button{
-    display: flex;
-    gap:16px
-}
-
-.bg__button__play{
+.bg__button__info {
     display: flex;
     align-items: center;
-    justify-content: center;
-    border-radius: 5%;
-    padding: 6px 25px;
-    margin-right: 5%;  
-    cursor: pointer; 
-    border-radius: 2%;
-    border: none;
-    gap: 8px;
-}
-
-.bg__button__play span{
-    font-size: 18px;
-    font-family: 'Inter', sans-serif;
-    height: 400;
     
-}
-
-.bg__button__info{
+    color: white;
+    padding: 0.6rem 2rem;
+    margin-right: 0.75rem;
+    font-weight: 600;
+    border-radius: 0.125rem;
+    background-color: rgba(109, 109, 110, 0.7);
+    font-family: inherit;
+    font-size: 100%;
+    border: solid transparent;
+    gap: 12px;
+  }
+  .bg__button__info:hover {
+    background-color: rgba(109, 109, 110, 0.525);
+  }
+  
+  .bg__button__info i {
+    margin-right: 0.5rem;
     display: flex;
     align-items: center;
     justify-content: center;
-    border-radius: 3%;
-    padding: 6px 25px;
-    background-color: rgba(87, 87, 87, 0.7);
-    border: none;
-    cursor: pointer;  
-    gap: 8px; 
-}
-
-.bg__button__info span{
-    font-size: 18px;
-    font-family: 'Inter', sans-serif;
-    color: #fff;
-}
-
+  }
 
 
