--- a/src/style.css
+++ b/src/style.css
@@ -72,6 +72,7 @@ header {
 
 .app__background {
     height: 100vh;
+    width: 100vw;
     background-image: linear-gradient(
         to bottom,
         rgba(0, 0, 0, 0.9) 5%,
@@ -83,6 +84,7 @@ header {
     background-size: cover;
     padding: 0.26rem 0.75rem 0 0.75rem;
   }
+
   
   .app__hero {
     width: 100%;
@@ -160,12 +162,183 @@ header {
   border: solid transparent;
   }
 
-  .bg__button__info:hover {
-    background-color: rgba(109, 109, 110, 0.525);
-  }
+.bg__button__info:hover {
+  background-color: rgba(109, 109, 110, 0.525);
+}
   
-  .bg__button__info i {
-    margin-right: 0.5rem;
-  }
+.bg__button__info i {
+  margin-right: 0.5rem;
+}
+
+  /*    Poster minhas lista   */
+
+.kt {
+  height: 200px;
+ }
+
+.kt__titulo {
+    color: #e5e5e5e5;
+    font-size: 18px;
+    line-height: 17px;
+    font-weight: 600;
+}
+  
+section {
+  width: 100%;
+  position: relative;
+  display: grid;
+  grid-template-columns: repeat(5, auto);
+  margin: 20px 0;
+}
+
+.lista {
+  padding: 0 2px;
+  transition: 250ms all;
+}
+    
+.lista img {
+  max-width: 100%;
+  padding-right: 5px
+}
+  
+section {
+  width: 100%;
+  position: relative;
+  display: grid;
+  grid-template-columns: repeat(5, auto);
+  margin: 20px 0;
+}
+  
+.-animacao:hover {
+   margin: 0 40px;
+   transform: scale(1.2);
+}
+  
+.lista img {
+  max-width: 100%;
+  padding-right: 5px;
+}
 
 
+/*  Listas de séries  */
+
+.wrapper {
+  display: grid;
+  grid-template-columns: repeat(3, 100%);
+  overflow: hidden;
+  scroll-behavior: smooth;
+}
+
+.arrow__btn {
+  position: absolute;
+  color: #fff;
+  text-decoration: none;
+  font-size: 6em;
+  background: rgb(0, 0, 0);
+  width: 80px;
+  padding: 20px;
+  text-align: center;
+  z-index: 1;
+}
+
+.arrow__btn i {
+  font-size: 2rem;
+  color: rgba(255, 255, 255, 0.637);
+}
+
+.arrow__btn i:hover {
+  color: white;
+  transform: scale(1.15);
+}
+
+.arrow__btn:nth-of-type(1) {
+  top: -16px;
+  bottom: -10px;
+  left: 0;
+  background: linear-gradient(
+    -90deg,
+    rgba(0, 0, 0, 0) 0%,
+    rgba(0, 0, 0, 1) 100%
+  );
+}
+
+.arrow__btn:nth-of-type(2) {
+  top: -16px;
+  bottom: -10px;
+  right: 0;
+  background: linear-gradient(
+    90deg,
+    rgba(0, 0, 0, 0) 0%,
+    rgba(0, 0, 0, 1) 100%
+  );
+}
+
+
+/*  Rodapé do site  */
+
+footer {
+  margin-top: 2rem;
+}
+
+.link-rede_social {
+  height: 25px;
+  width: 50%;
+}
+
+.link-rede_social i {
+  font-size: 22px;
+  margin-right: 1.5rem;
+  cursor: pointer;
+  color: white;
+}
+
+.conteudo-link {
+  margin: 20px auto;
+  color: grey;
+}
+
+.conteudo-link__info {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  gap: 0.5em;
+}
+
+.conteudo-link__info ul {
+  font-size: 13px;
+  display: flex;
+  flex-direction: column;
+  padding: initial;
+}
+
+.conteudo-link__info ul li {
+  list-style: none;
+  margin-bottom: 16px;
+  cursor: pointer;
+}
+
+.conteudo-link__info ul li:hover {
+  text-decoration: underline;
+}
+
+.conteudo-link__servico {
+  margin-bottom: 20px;
+  font-size: 13px;
+}
+
+.conteudo-link__servico-code {
+  background: 0 0;
+  color: grey;
+  border: solid 1px grey;
+  padding: 0.5rem;
+}
+
+.conteudo-link__servico-code:hover {
+  color: white;
+  border: solid 1px white;
+}
+
+.conteudo-link__copyright {
+  font-size: 11px;
+  margin-bottom: 15px;
+  padding: 1rem 4px;
+}
